<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">来住吧</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_load_data_error">对不起,出错了</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">以上是所有数据</string>
    <string name="check_file_exists">检测是否已下载..</string>
    <string name="checked_new_version">检查到新版本：%s</string>
    <string name="download_new_version">正在下载新版本</string>
    <string name="tip_download_file">文件将被保存到sdcard, 路径: %s</string>
    <string name="status_download_fail">下载失败</string>
    <string name="download_file_size">文件大小：%s</string>
    <string name="file_exists_confirm_content">之前已下载过该版本，请选择是否直接安装</string>
    <string name="file_exists_confirm_install">直接安装</string>
    <string name="file_exists_confirm_download">重新下载</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">加载中</string>
    <string name="cube_ptr_refresh_complete">加载完成</string>
    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>
    <string name="tab_booking">订酒店</string>
    <string name="check_in">入住</string>
    <string name="total">共</string>
    <string name="night">晚</string>
    <string name="check_out">离开</string>
    <string name="city">城市</string>
    <string name="destination">目的地</string>
    <string name="price">价格</string>
    <string name="search_hotel">查找</string>
    <string name="nearby_hotel">附近酒店</string>
    <string name="hour_room">钟点房</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="title_activity_select_date">SelectDateActivity</string>
    <string name="ensure">确定</string>
    <string name="price_range_start">PriceRangeStart</string>
    <string name="price_range_end">PriceRangeEnd</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="on_loading">正在加载...</string>
    <string name="select_city">选择城市</string>
    <string name="booking_cityid">booking_cityid</string>
    <string name="booking_cityname">booking_cityname</string>
    <string name="please_enter_destination">请输入地名或酒店名</string>
    <string name="booking_destination">booking_destination</string>
    <string name="title_activity_search_list">SearchListActivity</string>
    <string name="rank_by_price_asc">价格最低</string>
    <string name="rank_by_price_desc">价格最高</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="forward">Forward</string>
    <string name="prompt">Prompt</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="address_book">Address book</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="login">登录</string>
    <string name="user_name">User name</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="mute">Mute</string>
    <string name="Hands_free">Hands free</string>
    <string name="hang_up">Hang up</string>
    <string name="answer">Answer</string>
    <string name="newchat">Create new group</string>
    <string name="agree">确认</string>
    <string name="chat_room">Chat room</string>
    <string name="not_download">Did not download:</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">这个用户已经是你的朋友</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="send_successful">Request was sent, waiting for the peer to accept</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="be_removing">Be removing</string>
    <string name="call_duration">call duration</string>
    <string name="Refused">Refused</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="did_not_answer">did not answer</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="unable_to_get_loaction">Unable to get to your location information!</string>
    <string name="not_connect_to_server">Not connect to server, please try again later</string>
    <string name="sd_card_does_not_exist">"SD card does not exist, can't take pictures"</string>
    <string name="cant_find_pictures">"Can't find pictures"</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="order_info_pay_01">计入房费</string>
    <string name="order_info_pay_02">在线支付</string>
    <string name="dialog_opendoor_sure">确定</string>
    <string name="dialog_opendoor_cancel">取消</string>
    <string name="Submit_PayType">支付方式</string>
    <string name="order_info_pay_03">现金支付</string>
    <string name="app_cancel">取消</string>
    <string name="str_group_name_hint">群组名称</string>
    <string name="str_group_notice_hint">群公告(选填)</string>
    <string name="app_button_create">创建</string>
    <string name="str_group_permission_spinner">设置群组权限</string>
    <string name="ec_voip_reject_btn">拒绝</string>
    <string name="ec_voip_audioaccpet">切到语音接听</string>
    <string name="ec_voip_switchto_audio">切到语音通话</string>
    <string name="ec_voip_accept_call">接听</string>
    <string name="str_chatroom_name">房间名称:</string>
    <string name="tip_autoclose">创建人退出时自动解散</string>
    <string name="tip_autojoin">创建人是否自动加入</string>
    <string name="roometype">房间类型:</string>
    <string name="vociemode">声音模式:</string>
    <string name="allnoticevoice">全部提示音</string>
    <string name="onlybgmusic">没有提示音有背景音</string>
    <string name="nonevoice">无提示音无背景音</string>
    <string name="donotdeleteroom">不自动删除房间</string>
    <string name="deleteroom">自动删除房间</string>
    <string name="str_group_notice_provice">省份(选填)</string>
    <string name="str_group_notice_city">城市(选填)</string>
    <string name="str_group_permission_type">选择所属类型</string>
    <string name="setup_connect">connect地址</string>
    <string name="setup_connect_port">connect端口</string>
    <string name="setup_lvs">LVS地址</string>
    <string name="setup_lvs_port">LVS端口</string>
    <string name="setup_File">FileServer地址</string>
    <string name="setup_File_port">FileServer端口</string>
    <string name="setup_appid">appId</string>
    <string name="setup_apptoken">appToken</string>
    <string name="CouponsList01">可使用</string>
    <string name="CouponsList02">已过时</string>
    <string name="CouponsList03">已使用</string>
    <string name="CouponsList04">全部</string>
</resources>