<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_margin_space" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin_space"
                android:paddingLeft="3.0dip"
                android:text="@string/str_chatroom_name"
                android:textColor="#FFFFFFFF"
                android:textSize="19.0sp" />

            <include
                android:id="@+id/room_name"
                layout="@layout/ccp_edittext" />

            <LinearLayout
                android:id="@+id/ll_cb_autoclose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_autoclose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_autoclose"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cb_autojoin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_autojoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_autojoin"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/roometype" />

            <RadioGroup
                android:id="@+id/rg1_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb1_video"
                    android:button="@drawable/cb_check"
                    android:textColor="@color/black"
                    android:text="@string/deleteroom"
                     />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/cb_check"
                    android:text="@string/donotdeleteroom"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/vociemode" />

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/cb_check"
                    android:textColor="@color/black"
                    android:text="@string/allnoticevoice"
                     />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:button="@drawable/cb_check"
                    android:textColor="@color/black"
                    android:text="@string/onlybgmusic"
                    />

                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:button="@drawable/cb_check"
                    android:text="@string/nonevoice"
                     />
            </RadioGroup>

            <com.yuntongxun.ecdemo.common.view.CCPButton
                android:id="@+id/create_video_c_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/small_margin_space"
                android:background="@drawable/video_blue_button_selector"
                android:enabled="false" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>