<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llPopMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/OrderDialog"
    android:orientation="vertical">


    <LinearLayout
        android:layout_gravity="right"
        android:background="@drawable/bg_list_shadow_coupons"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_width="110dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnNewCoupons"
            android:gravity="center"
            android:background="@drawable/buttondown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CouponsList01"
            android:textColor="@color/TextBlack087"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_gap_140"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="1dp"
            />
        <Button
            android:gravity="center"
            android:background="@drawable/buttondown"
            android:id="@+id/btnOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CouponsList02"
            android:textColor="@color/TextBlack087"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_gap_140"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="1dp"
            />
        <Button
            android:id="@+id/btnUsedOld"
            android:gravity="center"
            android:background="@drawable/buttondown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CouponsList03"
            android:textColor="@color/TextBlack087"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_gap_140"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="1dp"
            />
        <Button
            android:gravity="center"
            android:background="@drawable/buttondown"
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CouponsList04"
            android:textColor="@color/TextBlack087"/>
    </LinearLayout>
</LinearLayout>